tests/lean/inv_del.lean.expected.out
inv_del.lean:15:2: error: 1 unsolved subgoal
A : Type,
P : vec A 1 → Type,
H : Π (a : A), P (vone a),
a : A
⊢ P (vone a)
inv_del.lean:15:2: error: failed to add declaration 'vec.eone' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  λ (A : Type) (P : …) (H : …) (v : …),
    ?M_1
